# formulis

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CODE_OF_CONDUCT.md  HACKING.md  README.md  conanfile.py
.github/workflows/: ci.yml  format.yml  pages.yml  test.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
docs/: Doxyfile
docs/pages/: index.md  internals.md  tests.md  using.md
include/formulis/: formulis.hpp
test/: CMakeLists.txt
test/source/: formulis_test.cpp
