cmake_minimum_required(VERSION 3.14)

project(formulisTests LANGUAGES CXX)

include(../cmake/project-is-top-level.cmake)
include(../cmake/folders.cmake)

# ---- Dependencies ----

if(PROJECT_IS_TOP_LEVEL)
  find_package(formulis REQUIRED)
  enable_testing()
endif()

find_package(Catch2 REQUIRED)
include(Catch)

# ---- Tests ----

add_executable(formulis_test source/formulis_test.cpp)
target_link_libraries(
    formulis_test PRIVATE
    formulis::formulis
    Catch2::Catch2WithMain
)
target_compile_features(formulis_test PRIVATE cxx_std_17)

catch_discover_tests(formulis_test)

# ---- End-of-file commands ----

add_folders(Test)
